istio-deployments/virtual-svc-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "virtual-service-gateway"
spec:
  hosts:
  - "*"
  gateways:
  - "service-gateway"
  http:
  - match:
    - uri:
        prefix: /api/transactions
    route:
    - destination:
        host: "payments"
        port:
          number: 8080
  - match:
    - uri:
        exact: /api/requesters
    route:
    - destination:
        host: "payment-checker"
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/orders
    route:
    - destination:
        host: "crm"
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/customers
    route:
    - destination:
        host: "fraud-detection"
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/frauds
    route:
    - destination:
        host: "fraud-detection"
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/authorizations
    route:
    - destination:
        host: "payments-authorization"
        port:
          number: 8080
